sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2: error: not found: value bubbleSort2
		bubbleSort2();
                ^AlgBubbleSort2:14: error: not found: value cpt
        cpt+=1
        ^