sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort()  {

  var lgr = getNombreValeurs()
  for (i <-0 to lgr-2)
  {
    for (j <- 0 to i)
    {

      if (!plusPetit(i,i+1))
      {

        echange(i,i+1)
        cpt+=1
      }
    }



  }
}